--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-ctransformers==0.2.5
-sentence-transformers==2.2.2
+ctransformers
+sentence-transformers
 pinecone-client
-langchain==0.0.255
+langchain
 flask
